--- a/assets/css/barra.css
+++ b/assets/css/barra.css
@@ -15,6 +15,11 @@ nav {
     display: flex;
     font-size: 12px;
     color: blanchedalmond;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     
 }
 
