--- a/assets/css/botones-encrip.css
+++ b/assets/css/botones-encrip.css
@@ -20,8 +20,8 @@ body {
 }
 
 .btn1:hover{
-    background-color: #081218;
-    border-color: #081218;
+    background-color: #17232b;
+    border-color: #17232b;
     color: #2196f3;
 }
 
